<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sliding_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gang_orange"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="100" >

    <TextView
        android:id="@+id/tv_views"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="10"
        android:gravity="center"
        android:shadowColor="#000123"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/views"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="70" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border_gray"
                android:padding="5dp"
                android:text="@string/textview"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/button"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:inputType="none"
                android:text="@string/edittext"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/iv_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/imageview"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>