<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/right_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gang_orange"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="100" >

    <RelativeLayout
        android:id="@+id/ll_title_right"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <TextView
            android:id="@+id/tv_hier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:shadowColor="#000123"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="4"
            android:text="@string/layers"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_add_layer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/gang_green"
            android:textSize="30sp"
            android:translationY="-15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_hier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="43"
        android:background="@color/gray_transparent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_hier"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_attr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:shadowColor="#000123"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/attributes"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_attr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="43"
        android:background="@color/gray_transparent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_attr"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>